@@ -256,6 +256,24 @@ default['repose']['api_validator']['wadl'] = nil
 default['repose']['api_validator']['dot_output'] = '/tmp/default.out'
 default['repose']['api_validator']['enable_rax_roles'] = false
 default['repose']['api_validator']['enable_api_coverage'] = true
+default['repose']['api_validator']['enable_rax_roles'] = nil
+default['repose']['api_validator']['enable_api_coverage'] = nil
+default['repose']['api_validator']['check_well_formed'] = nil
+default['repose']['api_validator']['check_grammars'] = nil
+default['repose']['api_validator']['check_elements'] = nil
+default['repose']['api_validator']['check_plain_params'] = nil
+default['repose']['api_validator']['do_xsd_grammar_transform'] = nil
+default['repose']['api_validator']['enable_pre_process_extension'] = nil
+default['repose']['api_validator']['remove_dups'] = nil
+default['repose']['api_validator']['xpath_version'] = nil
+default['repose']['api_validator']['xsl_engine'] = nil
+default['repose']['api_validator']['xsd_engine'] = nil
+default['repose']['api_validator']['mask_rax_roles_403'] = nil
+default['repose']['api_validator']['join_xpath_checks'] = nil
+default['repose']['api_validator']['enable_ignore_xsd_extension'] = nil
+default['repose']['api_validator']['validator_name'] = nil
+default['repose']['api_validator']['validate_checker'] = nil
+default['repose']['api_validator']['check_headers'] = nil
 
 default['repose']['ip_user']['user_header_name'] = 'X-PP-User'
 default['repose']['ip_user']['user_header_quality'] = '0.4'
